--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.3</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -121,6 +122,16 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
+				<configuration>
+					<instrumentation>
+						<ignores>
+						</ignores>
+						<excludes>
+							<exclude>**/*Test.class</exclude>
+							<exclude>com/github/hayarobi/simple_config/sample/**/*.class</exclude>
+						</excludes>
+					</instrumentation>
+				</configuration>
 			</plugin>
 		</plugins>
 	</reporting>
@@ -140,7 +151,7 @@
 	</developers>
 	<profiles>
 		<profile>
-			<id>ossrh</id>
+			<id>deploy_ossrh</id>
 			<build>
 				<plugins>
 					<plugin>
