--- a/src/test/resources/sampleconf.properties
+++ b/src/test/resources/sampleconf.properties
@@ -14,5 +14,6 @@ theothers.era=99.9
 
 # enum tests
 enums.planet = EARTH
+enums.planet2 = MerCury
 enums.round = DOWN
 enums.lists = VENUS,	MARS,	JUPITER
