Added mapping for Map and well known subclasses. Added mapping for well known subclasses of Collection. Collection format is changed.

--- a/src/test/resources/sample-list.properties
+++ b/src/test/resources/sample-list.properties
@@ -1,5 +1,7 @@
 #default
-# DataConfig
-list.and.date.fruits=apple,orange, mango
-list.and.date.magicNumbers= 15, 20
-list.and.date.fromTime=2015-03-02 12:34:56.111+05:00
+list.and.date.fruits.1=apple
+list.and.date.fruits.2=orange
+list.and.date.fruits.3=mango
+list.and.date.magicNumbers.first= 15
+list.and.date.magicNumbers.last= 20
+list.and.date.fromTime= 2015-03-02 12:34:56.111+05:00
