--- a/src/test/resources/sampleconf.properties
+++ b/src/test/resources/sampleconf.properties
@@ -16,4 +16,6 @@ theothers.era=99.9
 enums.planet = EARTH
 enums.planet2 = MerCury
 enums.round = DOWN
-enums.lists = VENUS,	MARS,	JUPITER
+enums.lists.0 = VENUS
+enums.lists.1 = MARS
+enums.lists.2 = JUPITER
