--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.hayarobi</groupId>
 	<artifactId>simple-config</artifactId>
-	<version>0.2</version>
+	<version>0.3</version>
 
 
 	<properties>
@@ -73,6 +73,11 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.6.201602180812</version>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -83,11 +88,14 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>com.google.guava</groupId> -->
-		<!-- <artifactId>guava</artifactId> -->
-		<!-- <version>19.0</version> -->
-		<!-- </dependency> -->
+
+		<!-- only needed when preload enabled -->
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.10</version>
+			<optional>true</optional>
+		</dependency>
 		<!-- unit test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -107,6 +115,12 @@
 			<version>1.1.3</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy</artifactId>
+			<version>2.4.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
@@ -117,23 +131,6 @@
 	</distributionManagement>
 
 	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.7</version>
-				<configuration>
-					<instrumentation>
-						<ignores>
-						</ignores>
-						<excludes>
-							<exclude>**/*Test.class</exclude>
-							<exclude>com/github/hayarobi/simple_config/sample/**/*.class</exclude>
-						</excludes>
-					</instrumentation>
-				</configuration>
-			</plugin>
-		</plugins>
 	</reporting>
 
 	<scm>
