속성값을 필수항목으로 강제하는 기능 추가. 기능 추가하면서 속성의 어노테이션 사용법도 많이 바뀜.
Added facility for required property policy.
Annotations for property is significantly changed.

--- a/src/test/resources/sampleconf.properties
+++ b/src/test/resources/sampleconf.properties
@@ -19,3 +19,7 @@ enums.round = DOWN
 enums.lists.0 = VENUS
 enums.lists.1 = MARS
 enums.lists.2 = JUPITER
+
+#req tests
+IMRequiredConf.noAnnoInt=-21
+IMRequiredConf.trueAnnoInt=1
