--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.github.hayarobi</groupId>
 	<artifactId>simple-config</artifactId>
-	<version>0.4</version>
+	<version>0.5-SNAPSHOT</version>
 
 
 	<properties>
