설정 클래스가 다른 클래스 객체를 포함하여 생성하는 기능 추가
Added support for nesting POJO as member.

--- a/src/test/resources/sample-list.properties
+++ b/src/test/resources/sample-list.properties
@@ -5,3 +5,30 @@ list.and.date.fruits.3=mango
 list.and.date.magicNumbers.first= 15
 list.and.date.magicNumbers.last= 20
 list.and.date.fromTime= 2015-03-02 12:34:56.111+05:00
+
+# complex
+list.and.date.complex.1.url = http://172.21.70.101:6800/
+list.and.date.complex.1.result=/home/search/tmp/result
+list.and.date.complex.1.numatc=31
+list.and.date.complex.1.maxConn=11
+list.and.date.complex.1.era=99.9
+
+list.and.date.complex.2.url = http://172.21.70.102:6800/
+list.and.date.complex.2.result=/home/search/tmp/result
+list.and.date.complex.2.numatc=32
+list.and.date.complex.2.maxConn=12
+list.and.date.complex.2.era=99.9
+
+list.and.date.complex.3.url = http://172.21.70.103:6800/
+list.and.date.complex.3.result=/home/search/tmp/result
+list.and.date.complex.3.numatc=33
+list.and.date.complex.3.maxConn=13
+list.and.date.complex.3.era=99.9
+
+list.and.date.complex.5.url = http://172.21.70.105:6800/
+list.and.date.complex.5.result=/home/search/tmp/result
+list.and.date.complex.5.numatc=35
+list.and.date.complex.5.maxConn=15
+list.and.date.complex.5.era=99.9
+
+list.and.date.emptyList
