--- a/src/test/resources/subconf.properties
+++ b/src/test/resources/subconf.properties
@@ -8,3 +8,22 @@ cyclic.directA.b.aAndCycle.b.numValue=456
 cyclic.indirect.cyclicValue=1
 cyclic.indirect.mid.loop.backToTop.cyclicValue=2
 cyclic.indirect.mid.loop.backToTop.mid.loop.backToTop.cyclicValue=3
+
+# map of collections of map
+mcm.triple.a.1.11=st11
+mcm.triple.a.2.21=st21
+mcm.triple.a.2.22=st22
+mcm.triple.a.3.31=st31
+mcm.triple.a.3.32=st32
+mcm.triple.a.3.33=st33
+mcm.triple.b.3.31=st31
+mcm.triple.b.3.32=st32
+mcm.triple.b.4.41=st41
+mcm.triple.b.4.42=st42
+mcm.triple.b.4.43=st43
+mcm.triple.b.4.44=st44
+mcm.triple.c.5.51=st51
+mcm.triple.c.5.52=st52
+mcm.triple.c.5.53=st53
+mcm.triple.c.5.54=st54
+mcm.triple.c.5.55=st55
