--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@
  */
 
 plugins {
-    id 'java'
+    id 'java-library'
     id 'maven-publish'
     id 'jacoco'
-    id("net.razvan.jacoco-to-cobertura") version "1.1.2"
+    id("net.razvan.jacoco-to-cobertura") version "1.3.2"
 }
 
 repositories {
@@ -17,16 +17,16 @@ repositories {
 dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.36'
     implementation 'org.reflections:reflections:0.10.2'
-    implementation 'org.yaml:snakeyaml:1.33'
-    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    implementation 'org.yaml:snakeyaml:2.4'
+    implementation group: 'com.google.guava', name: 'guava', version: '33.4.8-android'
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-all:1.10.19'
-    testImplementation 'ch.qos.logback:logback-classic:1.3.7'
+    testImplementation 'org.mockito:mockito-core:5.17.0'
+    testImplementation "ch.qos.logback:logback-classic:1.3.15"
     testImplementation 'org.codehaus.groovy:groovy:2.5.22'
 }
 
 group = 'com.github.hayarobi'
-version = '1.0-SNAPSHOT'
+version = '0.7'
 description = 'Simple Configuration'
 sourceCompatibility = '1.8'
 
@@ -57,17 +57,18 @@ tasks.register('reportToCobertura') {
 
 publishing {
     publications {
-        maven(MavenPublication) {
-            from(components.java)
+        create("mavenJava", MavenPublication) {
+            // java 컴포넌트를 등록
+            from components.java
         }
     }
 }
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
 }
 
 jacocoToCobertura {
-    inputFile.set(file("$buildDir/reports/xml/jacocoTestReport.xml"))
-    outputFile.set(file("$buildDir/reports/xml/cobertura.xml"))
+    inputFile.set(layout.buildDirectory.file("reports/xml/jacocoTestReport.xml"))
+    outputFile.set(layout.buildDirectory.file("reports/xml/cobertura.xml"))
 }
