--- a/build.gradle
+++ b/build.gradle
@@ -19,19 +19,22 @@ dependencies {
     implementation 'org.reflections:reflections:0.10.2'
     implementation 'org.yaml:snakeyaml:2.4'
     implementation group: 'com.google.guava', name: 'guava', version: '33.4.8-android'
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation platform('org.junit:junit-bom:5.12.2')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.mockito:mockito-core:5.17.0'
     testImplementation "ch.qos.logback:logback-classic:1.3.15"
     testImplementation 'org.codehaus.groovy:groovy:2.5.22'
 }
 
 group = 'com.github.hayarobi'
-version = '0.7'
+version = '0.7.1'
 description = 'Simple Configuration'
-sourceCompatibility = '1.8'
 
 java {
     withSourcesJar()
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 test {
@@ -71,4 +74,8 @@ tasks.withType(JavaCompile).configureEach {
 jacocoToCobertura {
     inputFile.set(layout.buildDirectory.file("reports/xml/jacocoTestReport.xml"))
     outputFile.set(layout.buildDirectory.file("reports/xml/cobertura.xml"))
+}
+
+tasks.test {
+    useJUnitPlatform() // JUnit 5 플랫폼 사용
 }
