--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'jacoco'
+    id 'signing'                 //
     id("net.razvan.jacoco-to-cobertura") version "1.3.2"
 }
 
@@ -28,7 +29,7 @@ dependencies {
 }
 
 group = 'com.github.hayarobi'
-version = '0.7.1'
+version = '0.7.2-SNAPSHOT'
 description = 'Simple Configuration'
 
 java {
