--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -8,6 +8,7 @@
 name: Java CI with Gradle
 
 on:
+  workflow_dispatch:
   pull_request:
     branches: [ "master" ]
 
@@ -20,18 +21,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - name: Check out repository code
+      uses: actions/checkout@v4
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
       with:
-        java-version: '11'
+        java-version: '21'
         distribution: 'temurin'
-    - name: init with Gradle
-      uses: gradle/gradle-build-action@v2
-    - run: gradle init
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        gradle-version: 7.5.1
-        arguments: build
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+    - name: build and test the project
+      run: ./gradlew build
 
